# LLM-Crypto-Trade

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  OPERATIONS.md  README.md  README_ANALYSIS_ENGINE.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: docker-compose.yml  prometheus.yml
config/alertmanager/: alertmanager.yml
config/loki/: loki-config.yaml
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
config/promtail/: promtail-config.yaml
docker/alert/: Dockerfile
docker/analyzer/: Dockerfile
docker/api/: Dockerfile
docker/collector/: Dockerfile
docker/strategy/: Dockerfile
examples/: example_backtest.py  example_optimization.py  simple_strategies.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.tsx  main.tsx
scripts/: analyze_market.py  backtest_strategy.py  collect_historical.py  init_database.py  optimize_strategy.py  run_backtest.py  start_paper_trading.py  start_realtime_collector.py
scripts/deployment/: backup.sh  restore.sh  setup.sh  start_services.sh  stop_services.sh
scripts/management/: manage.py  monitor.py
src/: __init__.py
src/ai_service/: __init__.py  ai_analyzer.py  config_manager.py  context_builder.py
src/alerting/: __init__.py  alert_manager.py  alert_rules.py
src/api/: __init__.py  dependencies.py  main.py
src/backtesting/: __init__.py
src/config/: __init__.py  auth_config_manager.py  constants.py  exchange_config_manager.py  notification_config_manager.py  settings.py  signal_config_manager.py
src/data_pipeline/: __init__.py  message_queue.py  normalizer.py  quality_checker.py  storage.py
src/models/: __init__.py  base.py
tests/: conftest.py  test_ai_service.py  test_alerting.py  test_api.py  test_backtest_engine.py  test_config.py  test_database.py  test_exchange_config.py  test_indicators.py  test_logger.py  test_monitoring.py  test_price_action_new.py  test_redis.py  test_risk_management.py  test_signal_config.py  test_signal_store.py  test_strategies.py  test_workers.py
(+189 files in other folders)
